// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter selector with multi selection renders correctly with ariaLabel 1`] = `
<div
  className="dropdown-container"
  data-focusindex={0}
>
  <input
    aria-controls="undefined-dropdown-list"
    aria-expanded={false}
    aria-haspopup={true}
    aria-label="my label"
    className="form-control dropdown-triggerer"
    onClick={[Function]}
    onFocus={[Function]}
    value=""
  />
</div>
`;

exports[`Filter selector with multi selection renders correctly with emptyOptioncaption 1`] = `
<div
  className="dropdown-container"
  data-focusindex={0}
>
  <input
    aria-controls="undefined-dropdown-list"
    aria-expanded={false}
    aria-haspopup={true}
    className="form-control dropdown-triggerer"
    onClick={[Function]}
    onFocus={[Function]}
    placeholder="find me"
    value=""
  />
</div>
`;

exports[`Filter selector with multi selection renders correctly with no options 1`] = `
<div
  className="dropdown-container"
  data-focusindex={0}
>
  <input
    aria-controls="undefined-dropdown-list"
    aria-expanded={false}
    aria-haspopup={true}
    className="form-control dropdown-triggerer"
    onClick={[Function]}
    onFocus={[Function]}
    value=""
  />
</div>
`;

exports[`Filter selector with multi selection renders correctly with options 1`] = `
<div
  className="dropdown-container"
  data-focusindex={0}
>
  <input
    aria-controls="undefined-dropdown-list"
    aria-expanded={false}
    aria-haspopup={true}
    className="form-control dropdown-triggerer"
    onClick={[Function]}
    onFocus={[Function]}
    value=""
  />
</div>
`;

exports[`Filter selector with single selection renders correctly with ariaLabel 1`] = `
<div
  className="dropdown-container"
  data-focusindex={0}
>
  <input
    aria-controls="undefined-dropdown-list"
    aria-expanded={false}
    aria-haspopup={true}
    aria-label="my label"
    className="form-control dropdown-triggerer"
    onClick={[Function]}
    onFocus={[Function]}
    value=""
  />
</div>
`;

exports[`Filter selector with single selection renders correctly with automatic options from the attribute 1`] = `
<FilterComponent
  attribute={
    Object {
      "filterable": true,
      "formatter": Object {
        "format": [MockFunction] {
          "calls": Array [
            Array [
              "enum_value_1",
            ],
            Array [
              "enum_value_2",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": "enum_value_1",
            },
            Object {
              "type": "return",
              "value": "enum_value_2",
            },
          ],
        },
        "parse": [MockFunction],
      },
      "get": [MockFunction],
      "id": "",
      "sortable": true,
      "type": "String",
      "universe": Array [
        "enum_value_1",
        "enum_value_2",
      ],
    }
  }
  auto={true}
  filterDispatcher={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "getFilterCondition": [Function],
          },
        ],
        Array [
          Object {
            "getFilterCondition": [Function],
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  options={Array []}
>
  <div
    className="dropdown-container"
    data-focusindex={0}
  >
    <input
      aria-controls="undefined-dropdown-list"
      aria-expanded={true}
      aria-haspopup={true}
      className="form-control dropdown-triggerer"
      onClick={[Function]}
      onFocus={[Function]}
      value=""
    />
    <ul
      className="dropdown-list"
      data-focusindex={0}
      id="undefined-dropdown-list"
      role="menu"
      style={
        Object {
          "width": 0,
        }
      }
    >
      <li
        className="filter-selected"
        key="0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <div
          className="filter-label"
        />
      </li>
      <li
        className=""
        key="1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <div
          className="filter-label"
        >
          enum_value_1
        </div>
      </li>
      <li
        className=""
        key="2"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <div
          className="filter-label"
        >
          enum_value_2
        </div>
      </li>
    </ul>
  </div>
</FilterComponent>
`;

exports[`Filter selector with single selection renders correctly with emptyOptioncaption 1`] = `
<div
  className="dropdown-container"
  data-focusindex={0}
>
  <input
    aria-controls="undefined-dropdown-list"
    aria-expanded={false}
    aria-haspopup={true}
    className="form-control dropdown-triggerer"
    onClick={[Function]}
    onFocus={[Function]}
    placeholder="find me"
    value=""
  />
</div>
`;

exports[`Filter selector with single selection renders correctly with no options 1`] = `
<div
  className="dropdown-container"
  data-focusindex={0}
>
  <input
    aria-controls="undefined-dropdown-list"
    aria-expanded={false}
    aria-haspopup={true}
    className="form-control dropdown-triggerer"
    onClick={[Function]}
    onFocus={[Function]}
    value=""
  />
</div>
`;

exports[`Filter selector with single selection renders correctly with options 1`] = `
<div
  className="dropdown-container"
  data-focusindex={0}
>
  <input
    aria-controls="undefined-dropdown-list"
    aria-expanded={false}
    aria-haspopup={true}
    className="form-control dropdown-triggerer"
    onClick={[Function]}
    onFocus={[Function]}
    value=""
  />
</div>
`;
